--- a/Site grid/style.css
+++ b/Site grid/style.css
@@ -140,3 +140,38 @@ svg{
 #compras svg{
     padding-right: 15px;
 }
+
+/*Informações*/
+
+#info{
+    display: grid;
+    grid-template-columns: 330px 240px 22px 608px 192px;
+    grid-template-rows: 100%;
+    height: 48px;
+}
+
+#botão-verde{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-column-start:2 ;
+    background-color: #7fad39;
+}
+
+#barra-de-pesquisa{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+
+    grid-column-start:4 ;
+    grid-template-rows: 100%;
+}
+
+#What-need{
+    color: #b2b2b2;
+}
+
+#barra4{
+    width: 10%;
+   height: 50%;
+}
