--- a/Site grid/style.css
+++ b/Site grid/style.css
@@ -145,9 +145,10 @@ svg{
 
 #info{
     display: grid;
-    grid-template-columns: 330px 240px 22px 608px 192px;
+    grid-template-columns: 330px 240px 22px 608px 109px 192px;
     grid-template-rows: 100%;
-    height: 48px;
+    height: 50px;
+    font-size: 18px;
 }
 
 #botão-verde{
@@ -165,13 +166,56 @@ svg{
 
     grid-column-start:4 ;
     grid-template-rows: 100%;
+
+    border: 2px solid #e9e9e9;
 }
 
 #What-need{
     color: #b2b2b2;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 #barra4{
     width: 10%;
    height: 50%;
+}
+
+#botão-verde>p{
+    padding-left: 10px;
+    color: white;
+}
+
+#all-cat{
+    padding-left: 18px;
+    padding-right: 20px;
+}
+
+#barra4{
+    background-color:rgb(197, 197, 197);
+    width: 0.2%;
+    height: 40%;
+    margin: 10px;
+}
+
+#btnProcurar{
+    background-color: #7fad39;
+}
+
+#search{
+    margin: 0;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   margin-top: 8px;
+}
+
+#rodinha{
+    background-color: #f5f5f5;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
 }
